# hydra-poc

./: CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  flake.nix  horizon.dhall  overlay.nix
cardano-ledger-formatting/: cardano-ledger-formatting.cabal
cardano-ledger-formatting/src/Cardano/Ledger/: Formatting.hs
cardano-ledger-formatting/test/: Main.hs
cardano-ledger-formatting/test/Test/Cardano/Ledger/Formatting/: GoldenSpec.hs
develop/: flake.nix
head-protocol/: 404.html  index.html
head-protocol/adr/: index.html
head-protocol/api-reference/: index.html
head-protocol/audit-guidelines/: index.html
head-protocol/benchmarks/: index.html
head-protocol/contribute/: index.html
head-protocol/docs/: index.html
head-protocol/search/: index.html
head-protocol/topologies/: index.html
head-protocol/unstable/: 404.html  adr.html  api-reference.html  audit-guidelines.html  benchmarks.html  contribute.html  docs-metadata.json  docs.html  index.html  search.html  sitemap.xml  topologies.html  use-cases.html  writing-style-guide.html
head-protocol/use-cases/: index.html
head-protocol/writing-style-guide/: index.html
hydra-cardano-api/: hydra-cardano-api.cabal
hydra-cluster/: hydra-cluster.cabal
hydra-node/: hydra-node.cabal
hydra-plutus/: hydra-plutus.cabal  plutus.json
pkgs/: RSA.nix  authenticate-oauth.nix  crypto-pubkey-types.nix  hspec-golden-aeson.nix  hspec-golden.nix  hspec-junit-formatter.nix  iso8601-time.nix  modern-uri.nix  quickcheck-arbitrary-adt.nix  quickcheck-dynamic.nix  relude.nix  req.nix  retry.nix  versions.nix  wai-websockets.nix
spec/: fig_offchain_prot.tex  offchain.tex  onchain.tex  overview.tex
(+528 files in other folders)
