cabal-version: 3.0
name:          cardano-ledger-formatting
version:       0.1.0
synopsis:      A Haskell API for Cardano, tailored to the Hydra project.
author:        IOG
copyright:     2024 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/hydra

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies -fprint-potential-instances
    -Wmissing-local-signatures

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  exposed-modules:
    Cardano.Ledger.Formatting

  build-depends:
    , base                    >=4.16
    , cardano-ledger-api
    , cardano-ledger-core
    , formatting

test-suite tests
  import:          project-config
  hs-source-dirs:  test
  ghc-options:     -haddock
  main-is: Main.hs
  other-modules:
    Test.Cardano.Ledger.Formatting.GoldenSpec
  type: exitcode-stdio-1.0

  build-depends:
    , base                    >=4.16
    , hspec
    , cardano-ledger-api
    , cardano-ledger-formatting
    , formatting
    , text                   
